[package]
authors = ["Adam Alenius <adam.alenius@gmail.com>"]
edition = "2018"
name = "eadalos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.10"
spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"
