[package]
authors = ["Adam Alenius <adam.alenius@gmail.com>"]
edition = "2018"
name = "eadalos"
version = "0.1.0"

[dependencies]
bootloader = "0.9.10"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.13.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"] 
test-success-exit-code = 33 # maps exit code (0x10 << 1) | 1 to 0
